adding business logic for sentiment, which analyze the sentiment of user journal and sends email on schedule